# sthenno-chatbot

./: .gitignore  README.md  bot.py  conversations_kto.json  conversations_simpo.json  kto_instructions.py  pyproject.toml  requirements.txt
notebooks/: client.ipynb  functions.ipynb  labels.ipynb  mimetypes.ipynb  multion.ipynb
offnine/modules/swarm/: core.py  types.py
offnine/modules/utils/: __init__.py  llm_utils.py
offnine/plugins/chat/: __init__.py
offnine/utils/: llm_functions.py
sthenno_chatbot/multion/: __init__.py
sthenno_chatbot/plugins/chat/: __init__.py
sthenno_chatbot/plugins/multion/: __init__.py
sthenno_chatbot/utils/: file_utils.py  llm_functions.py  llms.py
